# PlanificadorUniversitario

./: .gitignore  DOCKER_USER  Dockerfile  Makefile  README.md  configuracion.md  iv.yaml  iv.yml  pyproject.toml  travis.yml
.github/workflows/: docker-build.yml
configuracion/: configuracion.md
docs/: README.md  docker_images.md  gestor_dependencias.md  gestor_tareas.md  milestones.md  test_runner.md  user-journeys.md  user-stories.md
docs/precios/: Caceres_precios.xlsx  Leon_precios.xlsx  Malaga_precios.xlsx  Precios_de_Venta.xlsx
src/: datos_sedes.py  gestorPedidos.py  pedido.py  pieza.py  pieza_caracteristica.py  sede.py  sede_info.py  transporte.py
src/entidades/: pieza.py  sede.py  transporte.py
tests/: test_pedidos.py
