[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "OrganizarTaller"
version = "0.1.0"
description = "Default template for PDM package"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "LICENSE.txt" }
authors = [
    { name = "lmchaves", email = "lmchaveslop@gmail.com" },
]
dependencies = ["pandas>=2.2.3", "openpyxl>=3.1.5", "pytest>=8.3.4", "hypothesis>=6.123.0"]

[tool.pdm.dev-dependencies]
test = ["pytest"]
lint = ["flake8"]

[tool.pdm]
venv.location = "/home/userTest/.pdm-venvs"
