[project]
name = "OrganizarTaller"
version = "0.1.0"
description = "Este es el repositorio de Luis María CHaves López para la IV-24-25"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "LICENSE.txt" }
authors = [
    { name = "lmchaves", email = "lmchaveslop@gmail.com" },
]

[tool.pdm.dev-dependencies]
test = ["pytest"]
